# First_alis

./: Actor.cpp  Actor.h  CMakeLists.txt  Director.cpp  Director.h  Entity.cpp  Entity.h  FeatureFilm.cpp  FeatureFilm.h  Film.cpp  Film.h  IPlayable.cpp  IPlayable.h  MediaItem.cpp  MediaItem.h  Person.cpp  Person.h  ShortFilm.cpp  ShortFilm.h  Studio.cpp  Studio.h  main.cpp
